--- a/.htaccess
+++ b/.htaccess
@@ -1,12 +1,32 @@
+# Désactiver index et Multiviews si besoin
+# Options -Indexes
+# Options -Multiviews
+# Options +FollowSymlinks
+
+RewriteEngine On
+
+# Redirection HTTP vers HTTPS
+RewriteCond %{SERVER_PORT} 80
+RewriteRule ^(.*)$ https://small-api.com/$1 [R=301,L]
+
+# Redirection "single entry point" vers index.php
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^(.+)$ index.php [QSA,L]
+
+# Page 404 personnalisée
+ErrorDocument 404 /404
+
 <IfModule mod_headers.c>
     Header always set Access-Control-Allow-Origin "*"
     Header always set Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS"
-    Header always set Access-Control-Allow-Headers "Content-Type"
+    Header always set Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With"
+    Header always set Access-Control-Allow-Credentials "true"
+    Header always set Access-Control-Max-Age "1728000"
 </IfModule>
 
-# Gestion manuelle des requêtes OPTIONS (prévol CORS)
+# Réponse automatique aux requêtes OPTIONS (prévol CORS)
 <IfModule mod_rewrite.c>
-    RewriteEngine On
-    RewriteCond %{REQUEST_METHOD} =OPTIONS
-    RewriteRule ^.*$ [R=204,L]
+    RewriteCond %{REQUEST_METHOD} OPTIONS
+    RewriteRule ^(.*)$ - [R=204,L]
 </IfModule>
