--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,4 @@
-<!-- # Désactiver index et Multiviews si besoin
+# Désactiver index et Multiviews si besoin
 # Options -Indexes
 # Options -Multiviews
 # Options +FollowSymlinks
@@ -7,7 +7,7 @@ RewriteEngine On
 
 # Redirection HTTP vers HTTPS
 RewriteCond %{SERVER_PORT} 80
-RewriteRule ^(.*)$ https://small-api.com/$1 [R=301,L]
+RewriteRule ^(.*)$ https://api.httpotamus.dev/$1 [R=301,L]
 
 # Redirection "single entry point" vers index.php
 RewriteCond %{REQUEST_FILENAME} !-f
@@ -18,10 +18,6 @@ RewriteRule ^(.+)$ index.php [QSA,L]
 ErrorDocument 404 /404
 
 <IfModule mod_headers.c>
-    Header always set Access-Control-Allow-Origin "*"
-    Header always set Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS"
-    Header always set Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With"
-    Header always set Access-Control-Allow-Credentials "true"
     Header always set Access-Control-Max-Age "1728000"
 </IfModule>
 
@@ -29,4 +25,4 @@ ErrorDocument 404 /404
 <IfModule mod_rewrite.c>
     RewriteCond %{REQUEST_METHOD} OPTIONS
     RewriteRule ^(.*)$ - [R=204,L]
-</IfModule> -->
+</IfModule>
